<resources>
    <string name="app_name">Virtual Leaderboards Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Sign in</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="add_leaderboard">Add Leaderboard</string>
    <string name="vcn_leaderboard">VCN Leaderboard</string>
    <string name="add_hero">Add Hero</string>
    <string name="add_announcement">Add announcement</string>
    <string name="heroes">Heroes</string>
    <string name="announcementes">Announcementes</string>
    <string name="announce">Announce</string>
    <string name="announcement_details">Announcement details</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="invalid_email_formation">Invalid email formation</string>
    <string name="invalid_inputs">Invalid inputs</string>
    <string name="email_created_successfully">Email created successfully</string>
    <string name="invalid_credrentials">Invalid Credrentials</string>
</resources>