<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.signin.LogInFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/page_start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_20sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/page_end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_20sdp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/sign_up"
            android:textSize="@dimen/_28ssp"
            app:layout_constraintEnd_toEndOf="@id/page_end_guideline"
            app:layout_constraintStart_toStartOf="@id/page_start_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/name_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/page_end_guideline"
            app:layout_constraintStart_toStartOf="@id/page_start_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".25">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:hint="@string/first_name"
                android:textSize="@dimen/_12ssp"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:textSize="@dimen/_12ssp"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:hint="@string/email"
            android:textSize="@dimen/_12ssp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:layout_constraintEnd_toEndOf="@id/page_end_guideline"
            app:layout_constraintStart_toStartOf="@id/page_start_guideline"
            app:layout_constraintTop_toBottomOf="@id/name_container"
            app:layout_constraintVertical_bias=".25">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:hint="@string/password"
            android:textSize="@dimen/_12ssp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:layout_constraintEnd_toEndOf="@id/page_end_guideline"
            app:layout_constraintStart_toStartOf="@id/page_start_guideline"
            app:layout_constraintTop_toBottomOf="@id/email_container"
            app:layout_constraintVertical_bias=".25"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_46sdp"
            android:elevation="4dp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:cornerRadius="8dp"
            app:backgroundTint="?colorPrimary"
            app:layout_constraintEnd_toEndOf="@id/page_end_guideline"
            app:layout_constraintStart_toStartOf="@id/page_start_guideline"
            app:layout_constraintTop_toBottomOf="@id/password_container" />

        <LinearLayout
            android:id="@+id/sign_up_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/page_start_guideline"
            app:layout_constraintTop_toBottomOf="@id/sign_up">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>