<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.signin.LogInFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/page_start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_20sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/page_end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_20sdp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="@id/page_end_guideline"
            app:layout_constraintStart_toStartOf="@id/page_start_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="@dimen/_12ssp"
            app:boxBackgroundMode="filled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/page_end_guideline"
            app:layout_constraintStart_toStartOf="@id/page_start_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".25">

            <!--            app:boxBackgroundColor="#00000000"-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:hint="@string/password"
            android:textSize="@dimen/_12ssp"
            app:boxBackgroundMode="filled"
            app:layout_constraintEnd_toEndOf="@id/page_end_guideline"
            app:layout_constraintStart_toStartOf="@id/page_start_guideline"
            app:layout_constraintTop_toBottomOf="@id/email_container"
            app:layout_constraintVertical_bias=".25"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:background="@drawable/gradient_primary_secondary"
            android:id="@+id/log_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_46sdp"
            android:elevation="4dp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:backgroundTint="@null"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="@id/page_end_guideline"
            app:layout_constraintStart_toStartOf="@id/page_start_guideline"
            app:layout_constraintTop_toBottomOf="@id/password_container" />

        <LinearLayout
            android:id="@+id/sign_up_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/page_start_guideline"
            app:layout_constraintTop_toBottomOf="@id/log_in">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>